Make more reproducible on colab by adding import statement at start

--- a/convex-tutorial.ipynb
+++ b/convex-tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## A very short introduction to convex optimization\n",
     "\n",
-    "Here I cover a basic introduction to concepts and theory of convex optimization. The goal is to give an impression of why this is an important area of optimization, what its applications are, and some intiution for how it works. This is of course not meant to overview all areas of convex optimization, but more to give a flavor of the area by describing some results and theory as they relate to other areas that may be familiar to people (e.g. Lagrange multipliers). By presenting this in a notebook the aim is to focus on providing some geometric intuition whenever possible through plots whose parameters you can play with. Images not generated in this notebook are taken from one of the standard references: [Convex Optimization](https://web.stanford.edu/~boyd/cvxbook/bv_cvxbook.pdf), by Boyd and Vandenberghe. \n",
+    "Here I cover a basic introduction to concepts and theory of convex optimization. The goal is to give an impression of why this is an important area of optimization, what its applications are, and some intiution for how it works. This is of course not meant to overview all areas of convex optimization, it's a huge topic, but more to give a flavor of the area by describing some results and theory, particularly as they relate to other areas that may be familiar to people (e.g. Lagrange multipliers). By presenting this in a notebook the aim is to focus on providing some geometric intuition whenever possible through plotting simple examples whose parameters you can play with. Images not generated in this notebook are taken from one of the standard references: [Convex Optimization](https://web.stanford.edu/~boyd/cvxbook/bv_cvxbook.pdf), by Boyd and Vandenberghe. \n",
     "\n",
     "Here I will cover:\n",
     "\n",
@@ -137,6 +137,72 @@
     "for all $x_1,x\\in \\mathcal{X}$. \n",
     "\n",
     "This means the function can be lower bounded by a quadratic function with some fixed second derivative $mI$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ipympl in /Users/lansdell/anaconda3/lib/python3.7/site-packages (0.4.1)\n",
+      "Requirement already satisfied: ipykernel>=4.7 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipympl) (5.1.4)\n",
+      "Requirement already satisfied: ipywidgets>=7.5.0 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipympl) (7.5.1)\n",
+      "Requirement already satisfied: matplotlib>=2.0.0 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipympl) (3.1.3)\n",
+      "Requirement already satisfied: jupyter-client in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipykernel>=4.7->ipympl) (5.3.4)\n",
+      "Requirement already satisfied: appnope; platform_system == \"Darwin\" in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipykernel>=4.7->ipympl) (0.1.0)\n",
+      "Requirement already satisfied: ipython>=5.0.0 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipykernel>=4.7->ipympl) (7.12.0)\n",
+      "Requirement already satisfied: tornado>=4.2 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipykernel>=4.7->ipympl) (6.0.3)\n",
+      "Requirement already satisfied: traitlets>=4.1.0 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipykernel>=4.7->ipympl) (4.3.3)\n",
+      "Requirement already satisfied: nbformat>=4.2.0 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipywidgets>=7.5.0->ipympl) (5.0.4)\n",
+      "Requirement already satisfied: widgetsnbextension~=3.5.0 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipywidgets>=7.5.0->ipympl) (3.5.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from matplotlib>=2.0.0->ipympl) (2.8.1)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from matplotlib>=2.0.0->ipympl) (2.4.6)\n",
+      "Requirement already satisfied: numpy>=1.11 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from matplotlib>=2.0.0->ipympl) (1.18.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from matplotlib>=2.0.0->ipympl) (1.1.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from matplotlib>=2.0.0->ipympl) (0.10.0)\n",
+      "Requirement already satisfied: pyzmq>=13 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from jupyter-client->ipykernel>=4.7->ipympl) (18.1.1)\n",
+      "Requirement already satisfied: jupyter-core>=4.6.0 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from jupyter-client->ipykernel>=4.7->ipympl) (4.6.1)\n",
+      "Requirement already satisfied: decorator in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipython>=5.0.0->ipykernel>=4.7->ipympl) (4.4.1)\n",
+      "Requirement already satisfied: backcall in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipython>=5.0.0->ipykernel>=4.7->ipympl) (0.1.0)\n",
+      "Requirement already satisfied: pexpect; sys_platform != \"win32\" in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipython>=5.0.0->ipykernel>=4.7->ipympl) (4.8.0)\n",
+      "Requirement already satisfied: jedi>=0.10 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipython>=5.0.0->ipykernel>=4.7->ipympl) (0.14.1)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipython>=5.0.0->ipykernel>=4.7->ipympl) (3.0.3)\n",
+      "Requirement already satisfied: pickleshare in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipython>=5.0.0->ipykernel>=4.7->ipympl) (0.7.5)\n",
+      "Requirement already satisfied: pygments in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipython>=5.0.0->ipykernel>=4.7->ipympl) (2.5.2)\n",
+      "Requirement already satisfied: setuptools>=18.5 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from ipython>=5.0.0->ipykernel>=4.7->ipympl) (45.2.0.post20200210)\n",
+      "Requirement already satisfied: ipython-genutils in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from traitlets>=4.1.0->ipykernel>=4.7->ipympl) (0.2.0)\n",
+      "Requirement already satisfied: six in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from traitlets>=4.1.0->ipykernel>=4.7->ipympl) (1.14.0)\n",
+      "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from nbformat>=4.2.0->ipywidgets>=7.5.0->ipympl) (3.2.0)\n",
+      "Requirement already satisfied: notebook>=4.4.1 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (6.0.3)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from pexpect; sys_platform != \"win32\"->ipython>=5.0.0->ipykernel>=4.7->ipympl) (0.6.0)\n",
+      "Requirement already satisfied: parso>=0.5.0 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from jedi>=0.10->ipython>=5.0.0->ipykernel>=4.7->ipympl) (0.5.2)\n",
+      "Requirement already satisfied: wcwidth in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=5.0.0->ipykernel>=4.7->ipympl) (0.1.8)\n",
+      "Requirement already satisfied: pyrsistent>=0.14.0 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets>=7.5.0->ipympl) (0.15.7)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets>=7.5.0->ipympl) (19.3.0)\n",
+      "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets>=7.5.0->ipympl) (1.5.0)\n",
+      "Requirement already satisfied: prometheus-client in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (0.7.1)\n",
+      "Requirement already satisfied: nbconvert in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (5.6.1)\n",
+      "Requirement already satisfied: jinja2 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (2.11.1)\n",
+      "Requirement already satisfied: terminado>=0.8.1 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (0.8.3)\n",
+      "Requirement already satisfied: Send2Trash in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (1.5.0)\n",
+      "Requirement already satisfied: zipp>=0.5 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from importlib-metadata; python_version < \"3.8\"->jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets>=7.5.0->ipympl) (2.2.0)\n",
+      "Requirement already satisfied: testpath in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (0.4.4)\n",
+      "Requirement already satisfied: pandocfilters>=1.4.1 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (1.4.2)\n",
+      "Requirement already satisfied: mistune<2,>=0.8.1 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (0.8.4)\n",
+      "Requirement already satisfied: bleach in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (3.1.0)\n",
+      "Requirement already satisfied: entrypoints>=0.2.2 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (0.3)\n",
+      "Requirement already satisfied: defusedxml in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (0.6.0)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from jinja2->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (1.1.1)\n",
+      "Requirement already satisfied: webencodings in /Users/lansdell/anaconda3/lib/python3.7/site-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.5.0->ipympl) (0.5.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install ipympl"
    ]
   },
   {
@@ -580,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +702,7 @@
     "        line.set_xdata(theta_hist[:,0])\n",
     "        line.set_ydata(theta_hist[:,1])\n",
     "        line2.set_ydata(f_hist)\n",
-    "        ax.relim()\n",
+    "        #ax.relim()\n",
     "        display(fig)\n",
     "        clear_output(wait=True)#\n",
     "\n",
@@ -811,7 +877,7 @@
     "        l3.set_ydata(y_star)\n",
     "        l3.set_xdata(y)\n",
     "\n",
-    "        ax.relim()\n",
+    "        #ax.relim()\n",
     "        display(fig)\n",
     "        clear_output(wait=True)#\n",
     "\n",
@@ -1121,7 +1187,7 @@
     "        l22.set_ydata(a*a*(a<0)/2)\n",
     "        l23.set_ydata(a*a*(a<0)/2)\n",
     "\n",
-    "        ax.relim()\n",
+    "        #ax.relim()\n",
     "        display(fig)\n",
     "        clear_output(wait=True)\n",
     "\n",
