Minor text changes

--- a/convex-tutorial.ipynb
+++ b/convex-tutorial.ipynb
@@ -20,7 +20,9 @@
     "**Part B.**\n",
     "1. Conjugate functions\n",
     "2. Lagrangian duality\n",
-    "3. Generalizing Lagrange multipliers: the KKT conditions"
+    "3. Generalizing Lagrange multipliers: the KKT conditions\n",
+    "\n",
+    "An easy way to launch this notebook interactively is through google colab. Just follow [this](https://colab.research.google.com/github/benlansdell/convex-tutorial/blob/master/convex-tutorial.ipynb) link."
    ]
   },
   {
